# Biodict

./: CMakeLists.txt
src/: main.c
src/body/: body.h  calculations.c  collision.c  events.c  functions.c  game.c  graphics.c  initialization.c  io.c  movement.c  sorting.c
src/header/: constants.h  enums.h  functions.h  header.h  structures.h
src/header/functions/: calculations.h  collision.h  events.h  game.h  graphics.h  initialization.h  io.h  movement.h  sorting.h
